[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abuseipdb-mcp-server"
version = "1.0.0"
description = "MCP server for AbuseIPDB API integration"
authors = [{name = "AbuseIPDB MCP Server"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
keywords = ["mcp", "abuseipdb", "api", "security", "model-context-protocol"]

[project.urls]
Homepage = "https://github.com/your-repo/abuseipdb-mcp-server"
Repository = "https://github.com/your-repo/abuseipdb-mcp-server.git"
Issues = "https://github.com/your-repo/abuseipdb-mcp-server/issues"

[project.scripts]
abuseipdb-mcp-server = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 